--- a/content/preludes/dadu-1328.mdx
+++ b/content/preludes/dadu-1328.mdx
@@ -1,5 +1,3 @@
----
----
 
 # Xanadu dan Khanbaliq, 1328
 
@@ -19,7 +17,7 @@ pedas, meskipun saat itu udara cukup panas, ia masuk ke sebuah kedai, dan memesa
 bawang dan banyak rempah-rempah dari Sichuan, seperti resep yang diajarkan ibu gurunya, dan selalu disukainya. 
 
 Ibu guru Ki Seung Nyang adalah seorang wanita Goryeo, tetapi karena gurunya berasal dari Zhongyuan, maka ada beberapa resep masakan yang juga diketahui oleh 
-ibu gurunya. Salah satu yang paling disukainya adalah makanan bumbu khas Sichuan yang sangat pedas. Bahan-bahan yang diperlukan lebih mudah dicari di sini 
+ibu gurunya. Salah satu yang paling disukainya adalah makanan berbumbu khas Sichuan yang sangat pedas dan menghangatkan tubuh. Bahan-bahan yang diperlukan lebih mudah dicari di sini 
 ketimbang di Goryeo. Di Liaoning mereka memang menjualnya, tetapi dengan harga yang jauh lebih tinggi. Ia juga memesan teh bunga krisan yang aromanya sangat 
 harum, lalu mulai minum dengan santai sambil menikmati shaobing dan daging kambing yang dipesannya.
 
@@ -42,13 +40,13 @@ jauh lebih banyak. Berani taruhan, sebentar lagi pasti akan terjadi pemberontaka
 
 Setelah selesai makan dan membayar harga makanan dan minumannya, Ki Seung Nyang keluar dari kedai itu, dengan maksud melanjutkan perjalanannya 
 ke utara, tanpa arah dan tujuan yang pasti. Ia sangat menikmati petualangan seperti ini, dan membiarkan dirinya terbawa oleh langkah kakinya tanpa 
-memikirkan untung ruginya. Di sebuah tikungan ia melihat seorang pria yang tampaknya seorang Han, dan berusia sekitar tiga puluhan sedang minum di pinggir jalan. 
-Karena agak ragu memilih jalan, ia kemudian bertanya sambil menirukan suara anak lakilaki sebisanya, "Dage, kau tahu jalan ke arah Shangdu?"
+memikirkan untung ruginya. Di sebuah tikungan ia melihat seorang pria yang tampaknya seorang Han, berusia sekitar tiga puluhan, sedang minum di pinggir jalan. 
+Karena agak ragu memilih jalan, ia kemudian bertanya sambil menirukan suara anak laki-laki sebisanya, "Dage, kau tahu jalan ke arah Shangdu?"
 
 Mendengar logatnya, orang itu mengira dirinya berasal dari Jiangnan, dan dengan suatu cara tersesat sampai ke Dadu, 
 hingga akhirnya sampai ke sini. "Aih, kau masih tidak tahu bahaya. Sekarang ini sedang terjadi peperangan besar antara kubu 
 Dadu dengan Shangdu. Setelah Yesun Temur mati mendadak, keadaan kacau. Kelompok yang di Shangdu ingin mengangkat 
-Ragibagh, anaknya, menjadi Khan. Tetapi kelompok yang di Dadou ingin mengangkat Kusala atau Tugh Temur, pendeknya 
+Ragibagh, anaknya, menjadi Khan. Tetapi kelompok yang di Dadu ingin mengangkat Kusala atau Tugh Temur, pendeknya 
 anak-anak Khayishan." Ia menoleh ke sekelilingnya, lalu merendahkan suaranya dan berbisik, "Sebetulnya bagi kita 
 akan sangat menguntungkan kalau Kusala naik tahta, dia sangat mencintai adat suku Han, dan tidak terlalu kolot 
 seperti yang lain."
@@ -188,9 +186,9 @@ Di alun-alun kota itu, Ki Seung Nyang bersama-sama para penduduk setempat menyak
 dilaksanakan. Ia menjerit tertahan sambil memalingkan mukanya ke arah lain dan memejamkan mata saking terkejut.
 Di sekitarnya, ia masih mendengar orang berteriak-teriak dan memaki-maki para tawanan yang sudah mati itu untuk
 beberapa saat. Ketika membuka matanya, ia sekilas melihat seorang anak laki-laki yang sedang berdiri bersama
-para pengawalnya tak jauh dari situ. Anak itu kurang lebih berusia sebaya dengannya. Ia mengenakan pakaian seperti
+para pengawalnya tak jauh dari situ. Anak itu kurang lebih sebaya dengannya. Ia mengenakan pakaian seperti
 layaknya seorang anak keluarga bangsawan Mongolia, tetapi sikapnya sangat halus. Wajahnya tampan, dengan bola mata yang
-tampak kebiruan. Hidungnya mancung, dan matanya dalam. Tampaknya ia seorang keturunan suku dari wilayah barat,
+tampak kebiruan. Hidungnya mancung, dan matanya dalam. Tampaknya ia keturunan salah satu suku dari wilayah barat,
 seperti Naiman atau Merkit. Tetapi Ki Seung Nyang mendengar para pengawal di sekitarnya memanggilnya 'Gongzi', dan
 mereka berbicara kepada anak laki-laki itu dalam bahasa Han. Anak itu juga menjawab dengan bahasa Han yang sangat sempurna.
 
