--- a/content/sdyxz/bab1.mdx
+++ b/content/sdyxz/bab1.mdx
@@ -1,15 +1,11 @@
----
-title: Insiden Di Tengah Badai Salju
-author: FX. Adi Lima
-description: Novel Memanah Rajawali, Bab 1.
-image: https://res.cloudinary.com/drzjshskk/image/upload/e_contrast:85,q_auto:best/v1676662508/sdyxz/originals/ch01_qqa6or.jpg
-ilustrasi: |
-  Akhirnya si pendeta tertawa, mendadak telapak kanannya menghantam pegangan tombak dengan kecepatan seperti angin. 
-  Yang Tiexin merasa pangkal jempol dan telunjuknya mati rasa, dan dengan segera ia melepaskan tombak ke tanah 
-  yang diselimuti salju.
-nextPage: bab2
-prevPage: intro
----
+
+<div class="w3-panel w3-card-4 w3-round w3-leftbar w3-border-red">
+
+### Warning 
+
+Halaman ini masih belum tersentuh, dan memakai cerita asli karya Jin Yong, yang sewaktu-waktu bisa berubah.
+
+</div>
 
 # Bab 1
 
