--- a/content/index.mdx
+++ b/content/index.mdx
@@ -41,7 +41,7 @@ Qiao Feng, yang mewariskan ilmu silat dahsyat, 18 Jurus Penakluk Naga.
 
 ## Buku II
 
-Buku kedua sebenarnya adalah gabungan antara Buku 1 dan Buku 2 Trilogi Rajawali karya Jinyong, yang digabungkan dengan peristiwa sejarah 
+Buku kedua sebenarnya adalah gabungan antara Buku 1 dan Buku 2 Trilogi Rajawali karya Jin Yong, yang digabungkan dengan peristiwa sejarah 
 nyata. Rangkaian peristiwa di dalamnya berada di antara masa-masa awal munculnya Temujin, sebelum menjadi Genghis Khan, dan berakhir setelah 
 Yang Guo berhasil membunuh Mongke Khan. 
 
