--- a/content/index.mdx
+++ b/content/index.mdx
@@ -29,7 +29,7 @@ wilayah selatan, sedangkan Xia Barat termasuk 'Lima Dinasti' yang berkuasa di ut
 
 Kisah ini terkenal dengan judul Tian Long Ba Bu, atau diterjemahkan ke dalam bahasa Indonesia menjadi 'Para Pendekar Negeri Tayli'.
 
-Ini sebenarnya adalah pendahuluan bagi rangkaian cerita panjang yang kita kenal sebagai 'Trilogi Rajawali' karya Jinyong. Untuk memahami 
+Ini sebenarnya adalah pendahuluan bagi rangkaian cerita panjang yang kita kenal sebagai 'Trilogi Rajawali' karya Jin Yong. Untuk memahami 
 seluk beluk Kai Pang dan pergumulan Hong Qigong yang hadir d dalam cerita selanjutnya, kita harus terlebih dahulu membaca kisah mengenai 
 Qiao Feng, yang mewariskan ilmu silat dahsyat, 18 Jurus Penakluk Naga.
 
@@ -45,7 +45,7 @@ Buku kedua sebenarnya adalah gabungan antara Buku 1 dan Buku 2 Trilogi Rajawali 
 nyata. Rangkaian peristiwa di dalamnya berada di antara masa-masa awal munculnya Temujin, sebelum menjadi Genghis Khan, dan berakhir setelah 
 Yang Guo berhasil membunuh Mongke Khan. 
 
-Supaya lebih sejalan dengan cerita Jinyong, saya membagi Buku 2 ini menjadi dua bagian.
+Supaya lebih sejalan dengan cerita Jin Yong, saya membagi Buku 2 ini menjadi dua bagian.
 
 <div class="w3-panel w3-padding-16 w3-border w3-round">
 
@@ -58,7 +58,7 @@ Supaya lebih sejalan dengan cerita Jinyong, saya membagi Buku 2 ini menjadi dua 
 
 ### Bagian Pertama 
 
-Mengikuti cerita Jinyong yang aslinya berjudul She Diao Ying Xiong Zhuan, atau 'Kisah Memanah Burung Rajawali', bagian pertama dari buku 
+Mengikuti cerita Jin Yong yang aslinya berjudul She Diao Ying Xiong Zhuan, atau 'Kisah Memanah Burung Rajawali', bagian pertama dari buku 
 kedua ini disusun _hampir sama_ seperti cerita asli Memanah Burung Rajawali itu, dengan tokoh-tokoh fiksi yang sama, terutama sekali pasangan 
 pendekar Guo Jing dan Huang Rong, dan pasangan yang akan menjadi orang tua Yang Guo dalam bagian kedua, yaitu Yang Kang dan Mu Nianzi.
 
