--- a/content/yttlj/en/index.mdx
+++ b/content/yttlj/en/index.mdx
@@ -17,8 +17,7 @@ Wang Jeong (later on, King Chunghye of Goryeo). In this story, Wang Jeong is act
 her hometown in the first place.
 
 In the story, Ki Seung Nyang is one of the main characters, and actually responsible for many events in Zhang Wuji's life and turning points. She is 
-one of 7 personal disciples of Yang Dingtian — Ming Jiao's Archbishop in Zhongyuan at the time. In this case Yang Xiao, Fan Yao and Tajkis were among these 
-them. Yang Dingtian gave them a very serious task, translating a message written by Ahmad Fanakati and a historical book written by Rashd al-Din Hamadani, into 
+one of 7 personal disciples of Yang Dingtian — Ming Jiao's Archbishop in Zhongyuan at the time. In this case Yang Xiao, Fan Yao and Tajkis were among them. Yang Dingtian gave them a very serious task, translating a message written by Ahmad Fanakati and a historical book written by Rashid al-Din Hamadani, into 
 languages understood by Han people and Goryeo. This task was never totally completed, but nonetheless, the books can be well understood by people who 
 read them.
 
